--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,6 @@
 body {
     font-size: larger;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: aquamarine;
+    
 }
