--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,6 @@
 body {
     font-size: larger;
-<<<<<<< HEAD
-    font-family: 'Courier New', Courier, monospace;
-    background-color: bisque;
-=======
     font-family:Arial, Helvetica, sans-serif;
-    background-color: aquamarine;
+    background-color: burlywood;
     
->>>>>>> footer
 }
